--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://68.183.69.60:3306
+spring.datasource.url=jdbc:mysql://68.183.69.60:3306/healthtrack
 spring.datasource.username=duman
 spring.datasource.password=duman
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
